--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "vui",
-  "version": "0.1.0",
-  "private": true,
+  "name": "testcomponentzh",
+  "version": "0.1.3",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib":"vue-cli-service build --target lib --name testcomponentzh --dest lib components/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
